edition = "2023";

package wayplatform.connect.tachograph.v1;

import "wayplatform/connect/tachograph/card/v1/company_card_file.proto";
import "wayplatform/connect/tachograph/card/v1/control_card_file.proto";
import "wayplatform/connect/tachograph/card/v1/driver_card_file.proto";
import "wayplatform/connect/tachograph/card/v1/raw_card_file.proto";
import "wayplatform/connect/tachograph/card/v1/workshop_card_file.proto";
import "wayplatform/connect/tachograph/vu/v1/vehicle_unit_file.proto";

// Represents the entire content of a single parsed tachograph data file (e.g., .DDD, .C1B, .V1B).
//
// This message acts as a top-level container, providing a single, consistent type
// for any kind of tachograph file. It uses a manually tagged union pattern, where the
// `type` field indicates which of the specific file-type fields is populated.
message File {
  // The type of tachograph data file contained in this message. This acts as the
  // discriminator that tells the consumer which of the payload fields is valid.
  Type type = 1;

  // The content of the file if it is from a Vehicle Unit.
  // This field is populated if and only if `type` is `VEHICLE_UNIT`.
  wayplatform.connect.tachograph.vu.v1.VehicleUnitFile vehicle_unit = 2;

  // The content of the file if it is from a Driver Card.
  // This field is populated if and only if `type` is `DRIVER_CARD`.
  wayplatform.connect.tachograph.card.v1.DriverCardFile driver_card = 3;

  // The content of the file if it is from a Workshop Card.
  // This field is populated if and only if `type` is `WORKSHOP_CARD`.
  wayplatform.connect.tachograph.card.v1.WorkshopCardFile workshop_card = 4;

  // The content of the file if it is from a Control Card.
  // This field is populated if and only if `type` is `CONTROL_CARD`.
  wayplatform.connect.tachograph.card.v1.ControlCardFile control_card = 5;

  // The content of the file if it is from a Company Card.
  // This field is populated if and only if `type` is `COMPANY_CARD`.
  wayplatform.connect.tachograph.card.v1.CompanyCardFile company_card = 6;

  // The raw, uninterpreted content of a card file. This can be used as a
  // fallback or for applications that need to do their own detailed parsing.
  // This field is populated if and only if `type` is `RAW_CARD`.
  wayplatform.connect.tachograph.card.v1.RawCardFile raw_card = 7;

  // Defines the possible types of a tachograph data file.
  enum Type {
    // The file type is unknown or not specified.
    TYPE_UNSPECIFIED = 0;

    // A file downloaded from a Vehicle Unit (VU).
    VEHICLE_UNIT = 1;

    // A file downloaded from a Driver Card.
    DRIVER_CARD = 2;

    // A file downloaded from a Workshop Card.
    WORKSHOP_CARD = 3;

    // A file downloaded from a Control Card.
    CONTROL_CARD = 4;

    // A file downloaded from a Company Card.
    COMPANY_CARD = 5;

    // A raw, unparsed card file.
    RAW_CARD = 6;
  }
}